@@ -1,4 +1,4 @@
 set ( PROJECT_VERSION_MAJOR "2" )
 set ( PROJECT_VERSION_MINOR "1" )
-set ( PROJECT_VERSION_PATCH "1" )
+set ( PROJECT_VERSION_PATCH "2" )
 set ( PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}" )
